fix: header overlaped by loading images

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -6,7 +6,7 @@
   color: #007aff;
   margin: 0;
   padding: 10px;
-  z-index: 2;
+  z-index: 11;
 
   box-shadow: 0 10px 24px 2px #42445aff;
 }
